2007-03-29  Juergen Wieferink  <wieferink@freenet.de>

	* src/eval.c src/gp_time.h src/internal.c (f_strftime f_strptime)
	src/internal.h demo/stringvar.dem docs/gnuplot.doc:
	Introduce two new functions 'strftime' and 'strptime', which do
	essentially the same as the standard C functions with the same names,
	but use seconds since 2000 instead of struct tm.
	(Patchset #1199186 July 2005). 

2007-03-29  Ethan Merritt  <merritt@u.washington.edu>

	* demo/4D_data.dem demo/all.dem: Rename demo so that the filename is
	consistent with the demo scripts.

	* missing:  If makeinfo is not found, make the resulting error message
	non-fatal.  Bug #1682491

2007-03-28  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Cross-reference 'set datafile fortran'.

	* plot2d.c (eval_plots) plot3d.c (eval_3dplots): Keep track of whether
	we are in the midst of defining a parametric equation, so that the commas
	separating parametric components do not trigger premature iteration of a
	for [] specification.

2007-03-25  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* demo/histograms.dem: Add message to 'pause -1'.

	* src/wxterminal/gp_cairo.c
	(gp_cairo_draw_text, gp_cairo_draw_enhanced_text): Clear the path after
	drawing a text layout since pango does not do it by itself. This is a
	bug-fix for spurious 0-width lines that appear when a cairo-based
	terminal is used to generate pdf files, this bug does not appear in
	wxt.

	* src/wxterminal/gp_cairo.c: Fix and complete debugging messages.

2007-03-21 Daniel Sebald  <daniel.sebald@ieee.org>

	* src/graphics.c (boundary): The change of 2007-02-25 overlooked the
	2D plots having palettes that also required setup_tics(COLOR_AXIS,).
	Bug #1684789

2007-03-16 Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/winmain.c (appdata_directory): Prevent segfault if no
	directory is given and the environmental variable APPDATA is not set.

2007-03-14  Ethan Merritt  <merritt@u.washington.edu>
