@@ -1,5 +1,5 @@
 /*
- * $Id: wxt_term.h,v 1.5 2006/06/18 07:45:43 tlecomte Exp $
+ * $Id: wxt_term.h,v 1.6 2007/03/31 23:33:15 sfeam Exp $
  */
 
 /* GNUPLOT - wxt_term.h */
@@ -102,6 +102,7 @@ extern int wxt_raise;
 extern int wxt_ctrl;
 extern char wxt_set_fontname[MAX_ID_LEN + 1];
 extern int wxt_set_fontsize;
+extern int wxt_rounded;
 extern char wxt_title[MAX_ID_LEN + 1];
 
 #ifdef __cplusplus
