@@ -1,5 +1,5 @@
 /*
- * $Id: wxt.trm,v 1.18 2006/12/27 21:40:29 sfeam Exp $
+ * $Id: wxt.trm,v 1.19 2007/03/31 23:33:15 sfeam Exp $
  */
 
 /* GNUPLOT - wxt.trm */
@@ -63,6 +63,7 @@ TBOOLEAN wxt_enhanced_enabled = FALSE;
 int wxt_persist = UNSET;
 int wxt_raise = UNSET;
 int wxt_ctrl = UNSET;
+int wxt_rounded = no;
 /* default text font family: */
 char wxt_set_fontname[MAX_ID_LEN + 1] = "";
 /* default text size*/
@@ -82,6 +83,8 @@ enum WXT_id {
     WXT_NOCTRL,
     WXT_TITLE,
     WXT_CLOSE,
+    WXT_ROUNDED,
+    WXT_BUTT,
     WXT_OTHER
 };
 
@@ -97,6 +100,8 @@ static struct gen_table wxt_opts[] = {
     {"noct$rlq", WXT_NOCTRL},
     {"ti$tle", WXT_TITLE},
     {"cl$ose", WXT_CLOSE},
+    {"round$ed", WXT_ROUNDED},
+    {"butt", WXT_BUTT},
     {NULL, WXT_OTHER}
 };
 
@@ -115,6 +120,7 @@ TERM_PUBLIC void wxt_options()
 	TBOOLEAN set_persist = FALSE, set_number = FALSE;
 	TBOOLEAN set_raise = FALSE, set_ctrl = FALSE;
 	TBOOLEAN set_title = FALSE, set_close = FALSE;
+	TBOOLEAN set_capjoin = FALSE;
 
 	while (!END_OF_COMMAND) {
 		FPRINTF((stderr, "processing token\n"));
@@ -206,6 +212,18 @@ TERM_PUBLIC void wxt_options()
 			if (set_close) duplication=TRUE;
 			set_close = TRUE;
 			break;
+		case WXT_ROUNDED:
+			c_token++;
+			if (set_capjoin) duplication=TRUE;
+			wxt_rounded = yes;
+			set_capjoin = TRUE;
+			break;
+		case WXT_BUTT:
+			c_token++;
+			if (set_capjoin) duplication=TRUE;
+			wxt_rounded = no;
+			set_capjoin = TRUE;
+			break;
 		case WXT_OTHER:
 		default:
 			wxt_window_number = int_expression();
@@ -241,6 +259,10 @@ TERM_PUBLIC void wxt_options()
 		strncat(term_options, "\"", sizeof(term_options)-strlen(term_options));
 		free(font_setting);
 	}
+
+	if (set_capjoin)
+		strncat(term_options, wxt_rounded ? " rounded" : " butt",
+			sizeof(term_options)-strlen(term_options));
 
 	if (set_persist)
 		strncat(term_options,
